[GStreamer] proxy.getAvailableBuffer() can only be called from the compositor thread https://bugs.webkit.org/show_bug.cgi?id=219653

Reviewed by Xabier Rodriguez-Calvar.

When the player relies on the GL video sink the TextureMapperPlatformLayerProxyGL is used to render
frames to the compositor. In rare cases the frame holder can fail to map the GStreamer GL frame in
memory, so it needs to get a layer buffer from the TextureMapper and upload the frame contents to
it. That operation is done from the video sink streaming thread, which is different from the
compositor thread, so we can't ASSERT about this.

* Source/WebCore/platform/graphics/texmap/TextureMapperPlatformLayerProxyGL.cpp:
(WebCore::TextureMapperPlatformLayerProxyGL::getAvailableBuffer):

Canonical link: https://commits.webkit.org/271135@main